crates/wac-parser/tests/resolution/fail/import-id-span/wasi/cli/package.wit
package wasi:cli;

interface environment {
}
